syntax = "proto3";

option csharp_namespace = "CalcAppGRPC.Shared";

package calc;

service Calc {
  rpc Addition (CalcRequest) returns (CalcResponse);
  rpc Division (CalcRequest) returns (CalcResponse);
  rpc Multiplication (CalcRequest) returns (CalcResponse);
  rpc Subtraction (CalcRequest) returns (CalcResponse);
}

message CalcRequest{
  double value1 = 1;
  double value2 = 2;
}

message CalcResponse{
  double result = 1;
}